# ramo

./: Cargo.toml  README.md  install.ps1  install.sh  justfile
.github/workflows/: ci.yml  release.yml
benches/: parity.rs
docs/: performance.md
docs/parity/: hunk.md
src/: app.rs  clipboard.rs  error.rs  lib.rs  main.rs  pager.rs  pi_extension.rs  pi_prompt.md  remote_review.rs  runtime.rs  startup_notice.rs  terminal.rs  tmux.rs
src/annotations/: output.rs
src/cli/: args.rs  mod.rs  normalize.rs
src/config/: load.rs  mod.rs  model.rs  save.rs
src/core/: changeset.rs  input.rs  mod.rs
src/diff/: model.rs  parser.rs
src/github/: mod.rs
src/input/: file_pair.rs  mod.rs  pager.rs  patch.rs  pull_request.rs  vcs.rs
src/markup/: command.rs  guide.md  layout.rs  mod.rs  parse.rs  render.rs
src/notes/: context.rs  mod.rs  model.rs  target.rs
src/process/: command.rs  editor.rs  mod.rs
src/review/: anchor.rs  context.rs  emphasis.rs  geometry.rs  mod.rs  navigation.rs  row.rs  selection.rs  state.rs
src/session/: bridge.rs  cli.rs  client.rs  config.rs  daemon.rs  http.rs  mod.rs  model.rs  pdiff-review-SKILL.md  (+6 more)
tests/: agent_context.rs  annotations.rs  cli_contract.rs  cli_parse.rs  cli_vcs.rs  config_persistence.rs  config_resolution.rs  context_expansion.rs  editor.rs  git_loading.rs  github_cli.rs  highlighting.rs  input_loading.rs  installers.rs  integrations.rs  jj_loading.rs  library_surface.rs  markup_cli.rs  notes_state.rs  pager.rs  performance_bounds.rs  process_command.rs  pty_notes.rs  pty_pager.rs  pty_pr.rs  pty_session.rs  pty_tmux.rs  pty_ui.rs  pty_watch.rs  pull_request_loading.rs  reload.rs  remote_review_flow.rs  remote_review_model.rs  remote_review_targets.rs  review_selection.rs  review_state.rs  runtime_resolution.rs  session_bridge.rs  session_cli.rs  session_daemon.rs  (+19 more)
(+42 files in other folders)
