[package]
name = "pdiff"
version = "0.0.6"
edition = "2024"

[lib]
name = "pdiff"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
clap = { version = "4", features = ["derive"] }
syntect = "5"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
