[package]
name = "pdiff"
version = "0.0.6"
edition = "2024"

[lib]
name = "pdiff"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
clap = { version = "4", features = ["derive"] }
syntect = "5"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "1"
toml_edit = "0.23"
similar = "3"
shell-words = "1"
unicode-width = "0.2"
notify = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
portable-pty = "0.9"
predicates = "3"
tempfile = "3"
