[package]
name = "ramo"
version = "0.0.7"
edition = "2024"

[lib]
name = "ramo"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
clap = { version = "4", features = ["derive"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.23"
similar = "3"
shell-words = "1"
unicode-width = "0.2"
notify = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
portable-pty = "0.9"
predicates = "3"
tempfile = "3"
vt100 = "0.15"

[[bench]]
name = "parity"
harness = false
